--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,8 +39,12 @@ body {
 }
 
 @keyframes rainbow {
-	0% { filter: hue-rotate(0deg); color: var(--accent-light) }
-	50% { filter: hue-rotate(360deg); color: var(--accent-light) }
+	0% { filter: hue-rotate(0deg);  }
+	50% { filter: hue-rotate(360deg); }
+}
+@keyframes rainbowsvg {
+	0% { filter: hue-rotate(0deg); }
+	50% { filter: hue-rotate(360deg); }
 }
 
 /* Header */
@@ -171,7 +175,7 @@ main {
 	margin: 0 0 16px;
 	color: var(--accent-light);
 	transition: all 0.3s;
-	animation: rainbow 5s ease-in-out infinite;
+	animation: rainbow 15s ease-in-out infinite;
 }
 
 
@@ -246,10 +250,27 @@ main {
 	transform: scale(1.2);
 }
 
+
 .option-icon {
 	font-size: 32px;
 	margin-bottom: 16px;
 	transition: all 0.3s;
+}
+
+.option-img {
+	width: 48px;
+	height: 48px;
+	object-fit: contain;
+	margin-bottom: 16px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	fill: var(--accent);
+	animation: rainbowsvg 15s ease-in-out infinite;
+}
+
+.option-card .option-icon {
+	display: none;
 }
 
 .option-card h3 {
@@ -1367,7 +1388,7 @@ main {
     width: 100%;
     height: 100%;
     background: linear-gradient(90deg, transparent, var(--accent-light), transparent);
-    animation: shimmer 3s ease-in-out infinite;
+    animation: shimmer 8s ease-in-out infinite;
 }
 
 @keyframes shimmer {
@@ -1385,6 +1406,15 @@ main {
 }
 
 
+.section-content h2 {
+	color: var(--accent);
+	animation: rainbow 15s ease-in-out infinite;
+}
+
+.contact-content h2 {
+	color: var(--accent);
+	animation: rainbow 15s ease-in-out infinite;
+}
 
 /* Responsive Design */
 @media (max-width: 768px) {
