--- a/blog/blog.css
+++ b/blog/blog.css
@@ -71,6 +71,9 @@
     border-color: var(--accent);
     transform: translateY(-1px);
 }
+.short-story {
+    border: 1px solid var(--accent);
+}
 
 .post-meta {
     display: flex;
