--- a/blog/blog.css
+++ b/blog/blog.css
@@ -12,8 +12,10 @@
     font-size: 48px;
     font-weight: 700;
     margin: 0 0 16px;
-    color: var(--text);
     letter-spacing: -0.02em;
+
+    color: var(--accent-light);
+    animation: rainbow 15s ease-in-out infinite;
 }
 
 .blog-subtitle {
@@ -21,7 +23,7 @@
     color: var(--title);
     margin: 0 0 4px;
     font-weight: 400;
-    line-height: 1.6;
+    line-height: 1.3;
 }
 
 .blog-posts {
@@ -188,6 +190,9 @@
     color: var(--text);
     letter-spacing: -0.02em;
     line-height: 1.2;
+
+    color: var(--accent-light);
+    animation: rainbow 15s ease-in-out infinite;
 }
 
 .post-disclaimer {
@@ -297,7 +302,7 @@
     margin-bottom: 0.2em;
     text-indent: 3em;
 }
-.short-story-content p:nth-child(1) {
+.short-story-content p:first-of-type {
     text-indent: 0;
 }
 
