--- a/stylesheet.css
+++ b/stylesheet.css
@@ -388,7 +388,7 @@ main {
 
 /* Content Sections */
 .content-section {
-	padding: 45px 24px;
+	padding: 20px 24px;
 	max-width: 80vw;
 	margin: 0 auto;
 }
@@ -1526,6 +1526,7 @@ main {
 	.featured-project {
 		margin-right: 0;
 		margin-left: 0;
+		margin-bottom: 0;
 		padding: 24px;
 	}
 	
