Refactor dark mode implementation and improve transition handling with flashing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
 
+.disable-transitions *, .disable-transitions, .disable-transitions *:before, .disable-transitions *:after {
+    transition: none !important;
+}
+
 :root {
 	--background: #fffef3;
 	--text: #2d2d2d;
@@ -84,7 +88,7 @@ body {
 
 #header svg {
 	height: 20px;
-	padding-bottom: 2px;
+	padding-bottom: 4px;
 	vertical-align: middle;
 	fill: var(--accent);
 	animation: rainbowsvg 15s ease-in-out infinite;
@@ -189,8 +193,6 @@ body {
 	color: initial;
 	border-color: transparent;
 }
-
-
 
 /* Main Content */
 main {
