--- a/blog/blog.css
+++ b/blog/blog.css
@@ -225,7 +225,7 @@
     max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
-    font-family: 'SUSE';
+    font-family: 'Syne Mono';
 }
 
 .post-content p {
