--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
 
 .disable-transitions *, .disable-transitions, .disable-transitions *:before, .disable-transitions *:after {
     transition: none !important;
@@ -20,7 +20,7 @@
 	--warning: #d4a574;
 	--github-special: #404040;
 
-	--font-main: 'Inconsolata';
+	--font-main: 'Syne Mono';
 }
 
 body.dark-mode {
