Fix font-family bug

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=family=Faculty+Glyphic');
+@import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic');
 
 .blog-header {
     text-align: center;
