--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,24 @@
         <meta name="keywords" content="Indigo Nolan, blog, technology, writing, short story, short stories, UX design, programming, democracy, tech commentary"/>
         <meta name="author" content="Indigo Nolan"/>
         
+        <meta name="description" content="Portfolio of projects by Indigo Nolan including CashCat budgeting app, Fantasteroids game, web development tools, and open source contributions."/>
+		<meta name="keywords" content="Indigo Nolan, portfolio, projects, CashCat, Fantasteroids, web development, game development, open source"/>
+		<meta name="author" content="Indigo Nolan"/>
+		
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://indigonolan.com/blog">
+		<meta property="og:title" content="Blog - Indigo Nolan">
+		<meta property="og:description" content="A blog full of design thoughts, democracy opinions, and short stories.">
+		
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:title" content="Blog - Indigo Nolan">
+		<meta property="twitter:description" content="Blog of web applications, games, and development tools">
+		
+
+        <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | relative_url }}">
+        
         <script type="application/ld+json">
         {
             "@context": "https://schema.org",
