--- a/blog/blog.css
+++ b/blog/blog.css
@@ -2,11 +2,14 @@
 
 .blog-header {
     text-align: center;
-    padding: 40px 0 40px;
+    padding: 40px 0 10px;
     max-width: 800px;
     margin: 0 auto;
 }
 
+h2, h3, h4 {
+    scroll-margin-top: 80px;
+}
 .blog-header h1 {
     font-size: 48px;
     font-weight: 700;
@@ -225,7 +228,9 @@
     margin-right: auto;
     font-family: 'Faculty Glyphic';
 }
-
+.tag-heading {
+    text-decoration: underline;
+}
 .post-content p {
     margin: 0 0 1rem;
 }
@@ -373,7 +378,7 @@
         padding: 3px 6px;
     }
     .blog-header {
-        padding: 10px 16px 20px;
+        padding: 10px 16px 5px;
     }
     
     .blog-header h1 {
