--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,7 +55,7 @@
 
 						<div class="post-information">{{ page.date | date: "%B %d, %Y" }}</div>
 						<div class="post-information">Indigo</div>
-						<div class="post-information">{{page.tags}}</div>
+						<div class="post-information">{{page.tags | join: ' • '}}</div>
 					</div>
 				</header>
 
