--- a/reaction/stylesheet.css
+++ b/reaction/stylesheet.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
+
 
 :root {
 	--background: #fffef3;
@@ -12,6 +14,7 @@
 	--success: #7c9885;
 	--warning: #d4a574;
 	--error: #c85a5a;
+    --font-main: 'Syne Mono';
 }
 
 body {
