Update domain name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://indigonolan.com/blog">
+		<meta property="og:url" content="https://indigo.spot/blog">
 		<meta property="og:title" content="Blog - Indigo Nolan">
 		<meta property="og:description" content="A blog full of design thoughts, democracy opinions, and short stories.">
 		
@@ -45,7 +45,7 @@
             "@context": "https://schema.org",
             "@type": "WebSite",
             "name": "Indigo Nolan",
-            "url": "https://indigonolan.com",
+            "url": "https://indigo.spot",
             "author": {
                 "@type": "Person",
                 "name": "Indigo Nolan"
