--- a/blog/blog.css
+++ b/blog/blog.css
@@ -26,6 +26,7 @@ h2, h3, h4 {
     margin: 0;
     font-weight: 400;
     line-height: 1.3;
+    text-align: center;
 }
 
 .blog-posts {
@@ -429,7 +430,6 @@ h2, h3, h4 {
     }
     
     .post-title {
-        text-align: left;
         font-size: 32px;
     }
     
