--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1506,6 +1506,7 @@ main {
     max-width: 80%;
     position: relative;
     overflow: hidden;
+	border-radius: 5px;
 }
 
 .section-separator::before {
