--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,6 +29,30 @@
 	--font-small: 'Faculty Glyphic';
 }
 
+
+
+body.dark-mode {
+	--text: #fffef3;
+	--background: #2d2d2d;
+	--text-light: #b7b7b7;
+	--accent: #aa82a4;
+	--accent-light: #bd92b7;
+	--accent-soft: #3d3d3d;
+	--border: #503f28;
+	--card-bg: #3d3d3d;
+	--method-bg: #595959;
+	--card-shadow: rgba(0, 0, 0, 0.08);
+	--hover-shadow: rgba(0, 0, 0, 0.12);
+	--success: #7c9885;
+	--warning: #d4a574;
+	--github-special: #222222;
+}
+body.dark-mode a {
+	color: white;
+}
+
+
+
 * {
 	box-sizing: border-box;
 }
@@ -167,6 +191,12 @@ body {
 .tab-svg {
 	height: 100%;
 }
+.tab-svg.active{
+	background: initial;
+	color: initial;
+	border-color: transparent;
+}
+
 
 /* Main Content */
 main {
@@ -246,7 +276,6 @@ main {
 	transform: translateY(-4px) scale(1.02);
 	box-shadow: 0 8px 25px var(--hover-shadow);
 	border-color: var(--accent-light);
-
 }
 
 .option-card:hover::before {
