--- a/tutoring/stylesheet.css
+++ b/tutoring/stylesheet.css
@@ -424,3 +424,15 @@
 		padding: 2px 4px;
 	}
 }
+
+
+
+
+.small-margin {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.remove-bottom {
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
